# pitrex-baremetal

./: .todo.txt.kate-swp  HowToCompile.txt  Makefile  Makefile.baremetal  Makefile.zero  README.md  Rules.mk  git.txt  todo.txt
starwars/translate/asm6809-2.12/: ChangeLog  Makefile  Makefile.am  Makefile.in  README  TODO  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac
starwars/translate/asm6809-2.12/dt101/: Makefile  Makefile.am  Makefile.in  array.h  dict.c  dict.h  hash-djb2.c  hash-djb2.h  slist.c  slist.h
starwars/translate/asm6809-2.12/dt101/.deps/: dict.Po  hash-djb2.Po  slist.Po
starwars/translate/asm6809-2.12/gnulib/: Makefile  Makefile.am  Makefile.in  stdio.h  stdlib.h  string.h  unistd.h  wchar.h
starwars/translate/asm6809-2.12/gnulib/.deps/: asnprintf.Po  basename-lgpl.Po  bitrotate.Po  c-ctype.Po  c-strcasecmp.Po  c-strncasecmp.Po  dirname-lgpl.Po  exitfail.Po  getprogname.Po  gl_avltree_list.Po  gl_list.Po  gl_xlist.Po  hash.Po  printf-args.Po  printf-parse.Po  stripslash.Po  unistd.Po  vasnprintf.Po  xalloc-die.Po  xasprintf.Po  xmalloc.Po  xsize.Po  xvasprintf.Po
starwars/translate/asm6809-2.12/m4/: gnulib-cache.m4  gnulib-comp.m4
starwars/translate/asm6809-2.12/man/: Makefile  Makefile.am  Makefile.in  asm6809.1
starwars/translate/asm6809-2.12/src/: Makefile  Makefile.am  Makefile.in  asm6809  asm6809.c  asm6809.h  assemble.c  assemble.h  error.c  error.h  eval.c  eval.h  grammar.c  grammar.h  grammar.y  instr.c  instr.h  interp.c  interp.h  lex.c  lex.l  listing.c  listing.h  node.c  node.h  opcode.c  opcode.h  output.c  output.h  program.c  program.h  register.c  register.h  section.c  section.h  symbol.c  symbol.h
starwars/translate/asm6809-2.12/src/.deps/: asm6809-asm6809.Po  asm6809-assemble.Po  asm6809-error.Po  asm6809-eval.Po  asm6809-grammar.Po  asm6809-instr.Po  asm6809-interp.Po  asm6809-lex.Po  asm6809-listing.Po  asm6809-node.Po  asm6809-opcode.Po  asm6809-output.Po  (+4 more)
starwars/translate/asm6809-2.12/tests/: Makefile  Makefile.am  Makefile.in  isa6309-direct.cmp  isa6309-direct.s  isa6309-extended.cmp  isa6309-extended.s  isa6309-immediate.cmp  isa6309-immediate.s  isa6309-indexed.cmp  isa6309-indexed.s  isa6309-inherent.cmp  isa6309-inherent.s  isa6809-direct.cmp  isa6809-direct.s  isa6809-extended.cmp  isa6809-extended.s  isa6809-immediate.cmp  isa6809-immediate.s  isa6809-indexed.cmp  isa6809-indexed.s  isa6809-inherent.cmp  isa6809-inherent.s  isa6809-relative.cmp  isa6809-relative.s  pseudo-cond.cmp  pseudo-cond.s  pseudo-org-put-setdp.cmp  pseudo-org-put-setdp.s  pseudo-section.cmp  pseudo-section.s  test-isa6309.sh  test-isa6809.sh  test-pseudo.sh
(+998 files in other folders)
