MOSTLYCLEANFILES = *.out

CLEANFILES = *.lis

EXTRA_DIST = \
	test-isa6309.sh \
	test-isa6809.sh \
	test-pseudo.sh \
	isa6309-direct.s isa6309-direct.cmp \
	isa6309-extended.s isa6309-extended.cmp \
	isa6309-immediate.s isa6309-immediate.cmp \
	isa6309-indexed.s isa6309-indexed.cmp \
	isa6309-inherent.s isa6309-inherent.cmp \
	isa6809-direct.s isa6809-direct.cmp \
	isa6809-extended.s isa6809-extended.cmp \
	isa6809-immediate.s isa6809-immediate.cmp \
	isa6809-indexed.s isa6809-indexed.cmp \
	isa6809-inherent.s isa6809-inherent.cmp \
	isa6809-relative.s isa6809-relative.cmp \
	pseudo-cond.s pseudo-cond.cmp \
	pseudo-org-put-setdp.s pseudo-org-put-setdp.cmp \
	pseudo-section.s pseudo-section.cmp

AM_TESTS_ENVIRONMENT =

TESTS = test-isa6809.sh test-isa6309.sh test-pseudo.sh
